--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ test_BurstDebugInformation_DoNotShip/*
 /[Aa]ssets/_TerrainAutoUpgrade/*
 /[Aa]ssets/ProceduralLightning/*
 /[Aa]ssets/Gizmos/*
+/[Aa]ssets/Sound/Music/*
