Add basic difficulty management

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ test_BurstDebugInformation_DoNotShip/*
 /[Aa]ssets/ProceduralLightning/*
 /[Aa]ssets/Gizmos/*
 /[Aa]ssets/Sound/Music/*
+/[Aa]ssets/Plugins/Sirenix/*
